--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -151,20 +151,32 @@
                         }
 
                         .containerIcon {
+
                             ul {
                                 display: flex;
                                 list-style: none;
                                 justify-content: space-around;
 
-                                li>a {
-                                    display: flex;
-                                    flex-direction: row;
-                                    font-size: 5rem;
-                                    color: black;
-                                    text-decoration: none;
+                                li {
+                                    a {
+                                        display: flex;
+                                        flex-direction: row;
+                                        font-size: 5rem;
+                                        color: black;
+                                        text-decoration: none;
+                                        width: 5rem;
+
+                                        img {
+                                            width: 100%;
+                                        }
+
+                                        &:hover:nth-child(1) {
+                                            transition: .5s;
+                                            transform: rotateZ(-30deg);
+                                        }
+                                    }
                                 }
                             }
-
                         }
                     }
 
@@ -190,10 +202,45 @@
                 height: 100%;
                 background-color: #474747;
             }
+
+            /* ===== GitHub Corners ============================== */
+            .github-corner:hover .octo-arm {
+                animation: octocat-wave 560ms ease-in-out
+            }
+
+            @keyframes octocat-wave {
+
+                0%,
+                100% {
+                    transform: rotate(0)
+                }
+
+                20%,
+                60% {
+                    transform: rotate(-25deg)
+                }
+
+                40%,
+                80% {
+                    transform: rotate(10deg)
+                }
+            }
+
+            /* ===== Average ============================== */
+            @media (max-width:500px) {
+                .github-corner:hover .octo-arm {
+                    animation: none
+                }
+
+                .github-corner .octo-arm {
+                    animation: octocat-wave 560ms ease-in-out
+                }
+            }
         }
     }
 }
 
+/* ===== Average ============================== */
 @media(max-width: 1000px) {
     html {
         font-size: 93.75%;
