--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -5,310 +5,338 @@
           box-sizing: border-box;
 }
 
-@media (min-width: 1000px) {
-  html {
-    font-size: 62.5%;
-  }
-  html body {
-    font-size: 1.6rem;
-    /* ===== GitHub Corners ============================== */
-    /* ===== Average ============================== */
-  }
-  html body section {
-    font-family: 'Marko One', serif;
-    position: relative;
-    min-height: 100vh;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    background-color: #2EB99C;
-  }
-  html body section .container {
-    position: relative;
-    min-width: 1000px;
-    min-height: 450px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    z-index: 2;
-  }
-  html body section .container .contactinfo {
-    position: absolute;
-    z-index: 1;
-    top: 40px;
-    width: 350px;
-    padding: 40px;
-    height: calc(100% - 80px);
-    background-color: #2EB99C;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
-            box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
-  }
-  html body section .container .contactinfo .containerCep {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: normal;
-        -ms-flex-align: normal;
-            align-items: normal;
-    /* ===== Button ============================== */
-  }
-  html body section .container .contactinfo .containerCep input {
-    margin: 1rem 0rem;
-    padding: 5px;
-    border: none;
-    outline: none;
-    font-weight: 900;
-    color: black;
-    border-radius: 5px;
-    background: #2EB99C;
-    background: -webkit-gradient(linear, left top, right top, from(#81e6d9), to(#4fd1c5));
-    background: linear-gradient(90deg, #81e6d9 0%, #4fd1c5 100%);
-    border: 1px solid #00FFCB;
-  }
-  html body section .container .contactinfo .containerCep input:hover {
-    -webkit-box-shadow: 0 0 60px rgba(0, 255, 203, 0.64);
-            box-shadow: 0 0 60px rgba(0, 255, 203, 0.64);
-  }
-  html body section .container .contactinfo .containerCep .button {
-    font-family: 'Marko One', serif;
-    font-size: 20px;
-    text-transform: uppercase;
-    letter-spacing: 1.3px;
-    font-weight: 700;
-    color: black;
-    background: #2EB99C;
-    background: -webkit-gradient(linear, left top, right top, from(#81e6d9), to(#4fd1c5));
-    background: linear-gradient(90deg, #81e6d9 0%, #4fd1c5 100%);
-    border: none;
-    border-radius: 5px;
-    -webkit-box-shadow: 12px 12px 24px #4fd1c5a3;
-            box-shadow: 12px 12px 24px #4fd1c5a3;
-    -webkit-transition: all 0.3s ease-in-out 0s;
-    transition: all 0.3s ease-in-out 0s;
-    cursor: pointer;
-    outline: none;
-    position: relative;
-    padding: 10px;
-    margin-top: 5rem;
-  }
-  html body section .container .contactinfo .containerCep button::before {
-    content: '';
-    border-radius: 15px;
-    min-width: calc(270px + 12px);
-    min-height: calc(50px + 12px);
-    border: 6px solid #00FFCB;
-    -webkit-box-shadow: 0 0 60px rgba(0, 255, 203, 0.64);
-            box-shadow: 0 0 60px rgba(0, 255, 203, 0.64);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-    opacity: 0;
-    -webkit-transition: all .3s ease-in-out 0s;
-    transition: all .3s ease-in-out 0s;
-  }
-  html body section .container .contactinfo .containerCep .button:hover,
-  html body section .container .contactinfo .containerCep .button:focus {
-    color: #313133;
-    -webkit-transform: translateY(-6px);
-            transform: translateY(-6px);
-  }
-  html body section .container .contactinfo .containerCep button:hover::before,
-  html body section .container .contactinfo .containerCep button:focus::before {
-    opacity: 1;
-  }
-  html body section .container .contactinfo .containerCep button::after {
-    content: '';
+html {
+  font-size: 62.5%;
+}
+
+html body {
+  font-size: 1.6rem;
+  /* ===== GitHub Corners ============================== */
+  /* ===== Average ============================== */
+}
+
+html body section {
+  font-family: 'Marko One', serif;
+  position: relative;
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #2EB99C;
+}
+
+html body section .container {
+  position: relative;
+  min-width: 1000px;
+  min-height: 450px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  z-index: 2;
+}
+
+html body section .container .contactinfo {
+  position: absolute;
+  z-index: 1;
+  top: 40px;
+  width: 350px;
+  padding: 40px;
+  height: calc(100% - 80px);
+  background-color: #2EB99C;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
+}
+
+html body section .container .contactinfo .containerCep {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: normal;
+      -ms-flex-align: normal;
+          align-items: normal;
+  /* ===== Button ============================== */
+}
+
+html body section .container .contactinfo .containerCep input {
+  margin: 1rem 0rem;
+  padding: 5px;
+  border: none;
+  outline: none;
+  font-weight: 900;
+  color: black;
+  border-radius: 5px;
+  background: #2EB99C;
+  background: -webkit-gradient(linear, left top, right top, from(#81e6d9), to(#4fd1c5));
+  background: linear-gradient(90deg, #81e6d9 0%, #4fd1c5 100%);
+  border: 1px solid #00FFCB;
+}
+
+html body section .container .contactinfo .containerCep input:hover {
+  -webkit-box-shadow: 0 0 60px rgba(0, 255, 203, 0.64);
+          box-shadow: 0 0 60px rgba(0, 255, 203, 0.64);
+}
+
+html body section .container .contactinfo .containerCep .button {
+  font-family: 'Marko One', serif;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 1.3px;
+  font-weight: 700;
+  color: black;
+  background: #2EB99C;
+  background: -webkit-gradient(linear, left top, right top, from(#81e6d9), to(#4fd1c5));
+  background: linear-gradient(90deg, #81e6d9 0%, #4fd1c5 100%);
+  border: none;
+  border-radius: 5px;
+  -webkit-box-shadow: 12px 12px 24px #4fd1c5a3;
+          box-shadow: 12px 12px 24px #4fd1c5a3;
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+  cursor: pointer;
+  outline: none;
+  position: relative;
+  padding: 10px;
+  margin-top: 5rem;
+}
+
+html body section .container .contactinfo .containerCep button::before {
+  content: '';
+  border-radius: 15px;
+  min-width: calc(270px + 12px);
+  min-height: calc(50px + 12px);
+  border: 6px solid #00FFCB;
+  -webkit-box-shadow: 0 0 60px rgba(0, 255, 203, 0.64);
+          box-shadow: 0 0 60px rgba(0, 255, 203, 0.64);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  opacity: 0;
+  -webkit-transition: all .3s ease-in-out 0s;
+  transition: all .3s ease-in-out 0s;
+}
+
+html body section .container .contactinfo .containerCep .button:hover,
+html body section .container .contactinfo .containerCep .button:focus {
+  color: #313133;
+  -webkit-transform: translateY(-6px);
+          transform: translateY(-6px);
+}
+
+html body section .container .contactinfo .containerCep button:hover::before,
+html body section .container .contactinfo .containerCep button:focus::before {
+  opacity: 1;
+}
+
+html body section .container .contactinfo .containerCep button::after {
+  content: '';
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  border: 6px solid #00FFCB;
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-animation: ring 1.5s infinite;
+          animation: ring 1.5s infinite;
+}
+
+html body section .container .contactinfo .containerCep button:hover::after,
+html body section .container .contactinfo .containerCep button:focus::after {
+  -webkit-animation: none;
+          animation: none;
+  display: none;
+}
+
+@-webkit-keyframes ring {
+  0% {
     width: 30px;
     height: 30px;
-    border-radius: 100%;
-    border: 6px solid #00FFCB;
-    position: absolute;
-    z-index: -1;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-    -webkit-animation: ring 1.5s infinite;
-            animation: ring 1.5s infinite;
+    opacity: 1;
   }
-  html body section .container .contactinfo .containerCep button:hover::after,
-  html body section .container .contactinfo .containerCep button:focus::after {
-    -webkit-animation: none;
-            animation: none;
-    display: none;
-  }
-  @-webkit-keyframes ring {
-    0% {
-      width: 30px;
-      height: 30px;
-      opacity: 1;
-    }
-    100% {
-      width: 150px;
-      height: 150px;
-      opacity: 0;
-    }
-  }
-  @keyframes ring {
-    0% {
-      width: 30px;
-      height: 30px;
-      opacity: 1;
-    }
-    100% {
-      width: 150px;
-      height: 150px;
-      opacity: 0;
-    }
-  }
-  html body section .container .contactinfo .containerIcon ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    list-style: none;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-  }
-  html body section .container .contactinfo .containerIcon ul li a {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    font-size: 5rem;
-    color: black;
-    text-decoration: none;
-    width: 5rem;
-    -webkit-transition: .3s ease-in-out;
-    transition: .3s ease-in-out;
-  }
-  html body section .container .contactinfo .containerIcon ul li a img {
-    width: 100%;
-  }
-  html body section .container .contactinfo .containerIcon ul li a:hover {
-    -webkit-transform: rotateZ(-30deg);
-            transform: rotateZ(-30deg);
-  }
-  html body section .container .contactForm {
-    position: absolute;
-    padding: 70px 50px;
-    background-color: #EDC2C0;
-    margin-left: 150px;
-    padding-left: 250px;
-    width: 840px;
-    height: 100%;
-    -webkit-box-shadow: 0 50px 50px rgba(0, 0, 0, 0.5);
-            box-shadow: 0 50px 50px rgba(0, 0, 0, 0.5);
-  }
-  html body section .container .contactForm h2 {
-    font-size: 3rem;
-    font-weight: 900;
-    text-align: center;
-  }
-  html body section .container .contactForm input {
-    font-family: 'Marko One', serif;
-    text-align: center;
-    outline: none;
-    padding: 5px;
-    width: 30rem;
-    border: 2px solid #2EB99C;
-    border-radius: 5px;
-    margin: 1rem 0rem;
-  }
-  html body section .container .contactForm input:nth-child(2) {
-    width: 10rem;
-  }
-  html body section .container .contactForm .ImgReset {
-    width: 5rem;
-    display: block;
-    margin: 0 0 0 auto;
-    cursor: pointer;
-    -webkit-transform: rotate(100deg);
-            transform: rotate(100deg);
-    -webkit-transition: .5s ease-in-out;
-    transition: .5s ease-in-out;
-  }
-  html body section .container .contactForm .ImgReset:hover {
-    -webkit-transform: rotateZ(-10deg);
-            transform: rotateZ(-10deg);
-  }
-  html body section .container .contactForm .ImgReset img {
-    width: 100%;
-  }
-  html body section::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50%;
-    height: 100%;
-    background-color: #474747;
-  }
-  html body .github-corner:hover .octo-arm {
-    -webkit-animation: octocat-wave 560ms ease-in-out;
-            animation: octocat-wave 560ms ease-in-out;
-  }
-  @-webkit-keyframes octocat-wave {
-    0%,
-    100% {
-      -webkit-transform: rotate(0);
-              transform: rotate(0);
-    }
-    20%,
-    60% {
-      -webkit-transform: rotate(-25deg);
-              transform: rotate(-25deg);
-    }
-    40%,
-    80% {
-      -webkit-transform: rotate(10deg);
-              transform: rotate(10deg);
-    }
-  }
-  @keyframes octocat-wave {
-    0%,
-    100% {
-      -webkit-transform: rotate(0);
-              transform: rotate(0);
-    }
-    20%,
-    60% {
-      -webkit-transform: rotate(-25deg);
-              transform: rotate(-25deg);
-    }
-    40%,
-    80% {
-      -webkit-transform: rotate(10deg);
-              transform: rotate(10deg);
-    }
+  100% {
+    width: 150px;
+    height: 150px;
+    opacity: 0;
   }
 }
 
-@media (min-width: 1000px) and (max-width: 500px) {
+@keyframes ring {
+  0% {
+    width: 30px;
+    height: 30px;
+    opacity: 1;
+  }
+  100% {
+    width: 150px;
+    height: 150px;
+    opacity: 0;
+  }
+}
+
+html body section .container .contactinfo .containerIcon ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+html body section .container .contactinfo .containerIcon ul li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-size: 5rem;
+  color: black;
+  text-decoration: none;
+  width: 5rem;
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+}
+
+html body section .container .contactinfo .containerIcon ul li a img {
+  width: 100%;
+}
+
+html body section .container .contactinfo .containerIcon ul li a:hover {
+  -webkit-transform: rotateZ(-30deg);
+          transform: rotateZ(-30deg);
+}
+
+html body section .container .contactForm {
+  position: absolute;
+  padding: 70px 50px;
+  background-color: #EDC2C0;
+  margin-left: 150px;
+  padding-left: 250px;
+  width: 840px;
+  height: 100%;
+  -webkit-box-shadow: 0 50px 50px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 50px 50px rgba(0, 0, 0, 0.5);
+}
+
+html body section .container .contactForm .title {
+  font-size: 3rem;
+  font-weight: 900;
+  text-align: center;
+}
+
+html body section .container .contactForm input {
+  font-family: 'Marko One', serif;
+  text-align: center;
+  outline: none;
+  padding: 5px;
+  width: 30rem;
+  border: 2px solid #2EB99C;
+  border-radius: 5px;
+  margin: 1rem 0rem;
+}
+
+html body section .container .contactForm input:nth-child(2) {
+  width: 10rem;
+}
+
+html body section .container .contactForm .ImgReset {
+  width: 5rem;
+  display: block;
+  margin: 0 0 0 auto;
+  cursor: pointer;
+  -webkit-transform: rotate(100deg);
+          transform: rotate(100deg);
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+}
+
+html body section .container .contactForm .ImgReset:hover {
+  -webkit-transform: rotateZ(-10deg);
+          transform: rotateZ(-10deg);
+}
+
+html body section .container .contactForm .ImgReset img {
+  width: 100%;
+}
+
+html body section::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background-color: #474747;
+}
+
+html body .github-corner:hover .octo-arm {
+  -webkit-animation: octocat-wave 560ms ease-in-out;
+          animation: octocat-wave 560ms ease-in-out;
+}
+
+@-webkit-keyframes octocat-wave {
+  0%,
+  100% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  20%,
+  60% {
+    -webkit-transform: rotate(-25deg);
+            transform: rotate(-25deg);
+  }
+  40%,
+  80% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+}
+
+@keyframes octocat-wave {
+  0%,
+  100% {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  20%,
+  60% {
+    -webkit-transform: rotate(-25deg);
+            transform: rotate(-25deg);
+  }
+  40%,
+  80% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+}
+
+@media (max-width: 500px) {
   html body .github-corner:hover .octo-arm {
     -webkit-animation: none;
             animation: none;
@@ -328,16 +356,8 @@
     font-size: 1rem;
   }
   html body section {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    background-color: #112d42;
+    position: inherit;
+    display: inline-block;
   }
   html body section .container {
     display: -webkit-box;
@@ -347,36 +367,37 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    min-height: 614px;
-    z-index: 2;
-    border: 3px solid tomato;
   }
   html body section .container .contactinfo {
-    padding: 40px;
-    background-color: #0f3959;
+    position: initial;
+    width: 80%;
+    margin: 0 auto;
   }
-  html body section .container .contactinfo h2 {
-    color: white;
+  html body section .container .contactinfo .containerIcon ul li a {
+    margin-top: 2rem;
+    width: 3rem;
+  }
+  html body section .container .contactinfo .containerIcon ul li a img {
+    width: 100%;
   }
   html body section .container .contactForm {
-    background-color: #fff;
-    padding: 40px;
-    width: 600px;
-    height: 100%;
-    -webkit-box-shadow: 0 50px 50px rgba(0, 0, 0, 0.5);
-            box-shadow: 0 50px 50px rgba(0, 0, 0, 0.5);
+    position: initial;
+    padding: 3rem;
+    width: 80%;
+    margin: 0 auto;
   }
-  html body section::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50%;
-    height: 100%;
-    background-color: #03a9f4;
+  html body section .container .contactForm .title {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+  html body section .container .contactForm div {
+    text-align: center;
+  }
+  html body section .container .contactForm input:nth-child(2) {
+    width: 30rem;
+  }
+  html body section .container .contactForm .ImgReset {
+    width: 3rem;
   }
 }
 
@@ -386,6 +407,18 @@
   }
   html body {
     font-size: 1rem;
+  }
+  html body section .container {
+    min-width: 40rem;
+  }
+  html body section .container .contactinfo {
+    width: 100%;
+  }
+  html body section .container .contactForm {
+    width: 100%;
+  }
+  html body section .container .contactForm .ImgReset {
+    width: 3rem;
   }
 }
 /*# sourceMappingURL=main.css.map */
