--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -47,6 +47,7 @@ html body section .container {
   display: -ms-flexbox;
   display: flex;
   z-index: 2;
+  /* ===== Spinner ============================== */
 }
 
 html body section .container .contactinfo {
@@ -71,6 +72,11 @@ html body section .container .contactinfo {
           box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
 }
 
+html body section .container .contactinfo h1 {
+  color: #474747;
+  font-weight: 900;
+}
+
 html body section .container .contactinfo .containerCep {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -90,8 +96,8 @@ html body section .container .contactinfo .containerCep input {
   padding: 5px;
   border: none;
   outline: none;
+  color: #474747;
   font-weight: 900;
-  color: black;
   border-radius: 5px;
   background: #2EB99C;
   background: -webkit-gradient(linear, left top, right top, from(#81e6d9), to(#4fd1c5));
@@ -109,8 +115,8 @@ html body section .container .contactinfo .containerCep .button {
   font-size: 20px;
   text-transform: uppercase;
   letter-spacing: 1.3px;
-  font-weight: 700;
-  color: black;
+  color: #474747;
+  font-weight: 900;
   background: #2EB99C;
   background: -webkit-gradient(linear, left top, right top, from(#81e6d9), to(#4fd1c5));
   background: linear-gradient(90deg, #81e6d9 0%, #4fd1c5 100%);
@@ -224,7 +230,8 @@ html body section .container .contactinfo .containerIcon ul li a {
       -ms-flex-direction: row;
           flex-direction: row;
   font-size: 5rem;
-  color: black;
+  color: #474747;
+  font-weight: 900;
   text-decoration: none;
   width: 5rem;
   -webkit-transition: .3s ease-in-out;
@@ -255,6 +262,7 @@ html body section .container .contactForm {
 html body section .container .contactForm .title {
   font-size: 3rem;
   font-weight: 900;
+  color: #474747;
   text-align: center;
 }
 
@@ -267,6 +275,8 @@ html body section .container .contactForm input {
   border: 2px solid #2EB99C;
   border-radius: 5px;
   margin: 1rem 0rem;
+  color: #474747;
+  font-weight: 900;
 }
 
 html body section .container .contactForm input:nth-child(2) {
@@ -291,6 +301,111 @@ html body section .container .contactForm .ImgReset:hover {
 
 html body section .container .contactForm .ImgReset img {
   width: 100%;
+}
+
+html body section .container .sk-folding-cube {
+  z-index: 1;
+  margin: 4rem 40rem 0;
+  width: 40px;
+  height: 40px;
+  position: relative;
+  -webkit-transform: rotateZ(45deg);
+  transform: rotateZ(45deg);
+}
+
+html body section .container .sk-folding-cube .sk-cube {
+  float: left;
+  width: 50%;
+  height: 50%;
+  position: relative;
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+html body section .container .sk-folding-cube .sk-cube:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #474747;
+  -webkit-animation: sk-foldCubeAngle 2.4s infinite linear both;
+  animation: sk-foldCubeAngle 2.4s infinite linear both;
+  -webkit-transform-origin: 100% 100%;
+  transform-origin: 100% 100%;
+}
+
+html body section .container .sk-folding-cube .sk-cube2 {
+  -webkit-transform: scale(1.1) rotateZ(90deg);
+  transform: scale(1.1) rotateZ(90deg);
+}
+
+html body section .container .sk-folding-cube .sk-cube3 {
+  -webkit-transform: scale(1.1) rotateZ(180deg);
+  transform: scale(1.1) rotateZ(180deg);
+}
+
+html body section .container .sk-folding-cube .sk-cube4 {
+  -webkit-transform: scale(1.1) rotateZ(270deg);
+  transform: scale(1.1) rotateZ(270deg);
+}
+
+html body section .container .sk-folding-cube .sk-cube2:before {
+  -webkit-animation-delay: 0.3s;
+  animation-delay: 0.3s;
+}
+
+html body section .container .sk-folding-cube .sk-cube3:before {
+  -webkit-animation-delay: 0.6s;
+  animation-delay: 0.6s;
+}
+
+html body section .container .sk-folding-cube .sk-cube4:before {
+  -webkit-animation-delay: 0.9s;
+  animation-delay: 0.9s;
+}
+
+@-webkit-keyframes sk-foldCubeAngle {
+  0%,
+  10% {
+    -webkit-transform: perspective(140px) rotateX(-180deg);
+    transform: perspective(140px) rotateX(-180deg);
+    opacity: 0;
+  }
+  25%,
+  75% {
+    -webkit-transform: perspective(140px) rotateX(0deg);
+    transform: perspective(140px) rotateX(0deg);
+    opacity: 1;
+  }
+  90%,
+  100% {
+    -webkit-transform: perspective(140px) rotateY(180deg);
+    transform: perspective(140px) rotateY(180deg);
+    opacity: 0;
+  }
+}
+
+@keyframes sk-foldCubeAngle {
+  0%,
+  10% {
+    -webkit-transform: perspective(140px) rotateX(-180deg);
+    transform: perspective(140px) rotateX(-180deg);
+    opacity: 0;
+  }
+  25%,
+  75% {
+    -webkit-transform: perspective(140px) rotateX(0deg);
+    transform: perspective(140px) rotateX(0deg);
+    opacity: 1;
+  }
+  90%,
+  100% {
+    -webkit-transform: perspective(140px) rotateY(180deg);
+    transform: perspective(140px) rotateY(180deg);
+    opacity: 0;
+  }
 }
 
 html body section::before {
