--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -24,6 +24,7 @@ html {
 
         section {
             font-family: 'Marko One', serif;
+
             position: relative;
             min-height: 100vh;
 
@@ -54,6 +55,10 @@ html {
                     justify-content: space-between;
                     box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
 
+                    h1 {
+                        color: #474747;
+                        font-weight: 900;
+                    }
 
                     .containerCep {
                         display: flex;
@@ -66,8 +71,8 @@ html {
                             padding: 5px;
                             border: none;
                             outline: none;
+                            color: #474747;
                             font-weight: 900;
-                            color: black;
                             border-radius: 5px;
                             background: #2EB99C;
                             background: linear-gradient(90deg, #81e6d9 0%, #4fd1c5 100%);
@@ -83,8 +88,8 @@ html {
                             font-size: 20px;
                             text-transform: uppercase;
                             letter-spacing: 1.3px;
-                            font-weight: 700;
-                            color: black;
+                            color: #474747;
+                            font-weight: 900;
                             background: #2EB99C;
                             background: linear-gradient(90deg, #81e6d9 0%, #4fd1c5 100%);
                             border: none;
@@ -171,7 +176,8 @@ html {
                                     display: flex;
                                     flex-direction: row;
                                     font-size: 5rem;
-                                    color: black;
+                                    color: #474747;
+                                    font-weight: 900;
                                     text-decoration: none;
                                     width: 5rem;
                                     transition: .3s ease-in-out;
@@ -203,6 +209,7 @@ html {
                     .title {
                         font-size: 3rem;
                         font-weight: 900;
+                        color: #474747;
                         text-align: center;
                     }
 
@@ -215,7 +222,8 @@ html {
                         border: 2px solid #2EB99C;
                         border-radius: 5px;
                         margin: 1rem 0rem;
-
+                        color: #474747;
+                        font-weight: 900;
                     }
 
                     input:nth-child(2) {
@@ -237,6 +245,120 @@ html {
                         img {
                             width: 100%;
                         }
+                    }
+                }
+
+                /* ===== Spinner ============================== */
+                .sk-folding-cube {
+                    z-index: 1;
+                    margin: 4rem 40rem 0;
+                    width: 40px;
+                    height: 40px;
+                    position: relative;
+                    -webkit-transform: rotateZ(45deg);
+                    transform: rotateZ(45deg);
+                }
+
+                .sk-folding-cube .sk-cube {
+                    float: left;
+                    width: 50%;
+                    height: 50%;
+                    position: relative;
+                    -webkit-transform: scale(1.1);
+                    -ms-transform: scale(1.1);
+                    transform: scale(1.1);
+                }
+
+                .sk-folding-cube .sk-cube:before {
+                    content: '';
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    background-color: #474747;
+                    -webkit-animation: sk-foldCubeAngle 2.4s infinite linear both;
+                    animation: sk-foldCubeAngle 2.4s infinite linear both;
+                    -webkit-transform-origin: 100% 100%;
+                    -ms-transform-origin: 100% 100%;
+                    transform-origin: 100% 100%;
+                }
+
+                .sk-folding-cube .sk-cube2 {
+                    -webkit-transform: scale(1.1) rotateZ(90deg);
+                    transform: scale(1.1) rotateZ(90deg);
+                }
+
+                .sk-folding-cube .sk-cube3 {
+                    -webkit-transform: scale(1.1) rotateZ(180deg);
+                    transform: scale(1.1) rotateZ(180deg);
+                }
+
+                .sk-folding-cube .sk-cube4 {
+                    -webkit-transform: scale(1.1) rotateZ(270deg);
+                    transform: scale(1.1) rotateZ(270deg);
+                }
+
+                .sk-folding-cube .sk-cube2:before {
+                    -webkit-animation-delay: 0.3s;
+                    animation-delay: 0.3s;
+                }
+
+                .sk-folding-cube .sk-cube3:before {
+                    -webkit-animation-delay: 0.6s;
+                    animation-delay: 0.6s;
+                }
+
+                .sk-folding-cube .sk-cube4:before {
+                    -webkit-animation-delay: 0.9s;
+                    animation-delay: 0.9s;
+                }
+
+                @-webkit-keyframes sk-foldCubeAngle {
+
+                    0%,
+                    10% {
+                        -webkit-transform: perspective(140px) rotateX(-180deg);
+                        transform: perspective(140px) rotateX(-180deg);
+                        opacity: 0;
+                    }
+
+                    25%,
+                    75% {
+                        -webkit-transform: perspective(140px) rotateX(0deg);
+                        transform: perspective(140px) rotateX(0deg);
+                        opacity: 1;
+                    }
+
+                    90%,
+                    100% {
+                        -webkit-transform: perspective(140px) rotateY(180deg);
+                        transform: perspective(140px) rotateY(180deg);
+                        opacity: 0;
+                    }
+                }
+
+                @keyframes sk-foldCubeAngle {
+
+                    0%,
+                    10% {
+                        -webkit-transform: perspective(140px) rotateX(-180deg);
+                        transform: perspective(140px) rotateX(-180deg);
+                        opacity: 0;
+                    }
+
+                    25%,
+                    75% {
+                        -webkit-transform: perspective(140px) rotateX(0deg);
+                        transform: perspective(140px) rotateX(0deg);
+                        opacity: 1;
+                    }
+
+                    90%,
+                    100% {
+                        -webkit-transform: perspective(140px) rotateY(180deg);
+                        transform: perspective(140px) rotateY(180deg);
+                        opacity: 0;
                     }
                 }
             }
